--- a/accounts/templates/accounts/band_profile.html
+++ b/accounts/templates/accounts/band_profile.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+{% load custom_filters %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -72,7 +73,7 @@
                         <div>
                             <h3 class="font-bold text-gray-900 mb-3">Genres</h3>
                             <div class="flex flex-wrap gap-2">
-                                {% for genre in user.genres.split %}
+                                {% for genre in user.genres|split:',' %}
                                 <span class="px-3 py-1 bg-gray-100 text-gray-900 text-sm font-medium rounded-full">
                                     {{ genre }}
                                 </span>
